# nativelink

./: .bazelrc  BUILD.bazel  Cargo.toml  cas.json  demo  notes  only_scheduler.json  scheduler_1.json  scheduler_worker.json  scheduler_worker_2.json  steps
deployment-examples/docker-compose/: scheduler.json
deployment-examples/kubernetes/: .README.md.swp
deployment-examples/kubernetes/base/: scheduler.json  scheduler.yaml
nativelink-config/: BUILD.bazel  Cargo.toml
nativelink-config/examples/: basic_cas.json
nativelink-config/src/: schedulers.rs  stores.rs
nativelink-error/: BUILD.bazel  Cargo.toml
nativelink-error/src/: lib.rs
nativelink-metrics/macro-derive/: BUILD.bazel
nativelink-metrics/nativelink-metric/: BUILD.bazel
nativelink-proto/com/github/trace_machina/nativelink/remote_execution/: worker_api.proto
nativelink-proto/genproto/: com.github.trace_machina.nativelink.remote_execution.pb.rs
nativelink-scheduler/: BUILD.bazel  Cargo.toml  txt
nativelink-scheduler/_tests/: action_messages_test.rs  redis_adapter_test.rs
nativelink-scheduler/src/: action_scheduler.rs  cache_lookup_scheduler.rs  database_traits.rs  db_adapter.rs  default_scheduler_factory.rs  distributed_scheduler.rs  grpc_scheduler.rs  lib.rs  local_state.rs  operation_state_manager.rs  platform_property_manager.rs  property_modifier_scheduler.rs  redis_adapter.rs  redis_adapter_helpers.rs  redis_awaited_action.rs  redis_awaited_action_db.rs  redis_operation_state.rs  redis_pubsub.rs  redis_v2.rs  scheduler_instance_state.rs  scheduler_state.rs  simple_scheduler.rs  state_manager.rs  worker.rs  worker_scheduler.rs
nativelink-scheduler/src/awaited_action_db/: awaited_action.rs
nativelink-scheduler/src/scheduler_state/: state_manager.rs
nativelink-scheduler/tests/: action_messages_test.rs  cache_lookup_scheduler_test.rs  property_modifier_scheduler_test.rs  redis_adapter_test.rs  simple_scheduler_test.rs
nativelink-scheduler/tests/utils/: scheduler_utils.rs
nativelink-service/src/: execution_server.rs  worker_api_server.rs
nativelink-service/tests/: worker_api_server_test.rs
nativelink-state/: Cargo.toml
nativelink-state/src/: lib.rs  operation.rs  operation_state_manager.rs  redis_manager.rs  type_wrappers.rs
nativelink-state/tests/: test.rs
nativelink-store/: Cargo.toml
nativelink-store/src/: redis_store.rs
nativelink-store/tests/: redis_store_test.rs
nativelink-util/: BUILD.bazel  Cargo.toml
nativelink-util/src/: action_messages.rs  common.rs  digest_hasher.rs  platform_properties.rs
nativelink-worker/src/: local_worker.rs  running_actions_manager.rs
nativelink-worker/tests/utils/: mock_running_actions_manager.rs
