load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files(
    [
        ".rustfmt.toml",
        "clippy.toml",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "nativelink",
    srcs = [
        "src/bin/nativelink.rs",
    ],
    deps = [
        "//nativelink-config",
        "//nativelink-error",
        "//nativelink-proto",
        "//nativelink-scheduler",
        "//nativelink-service",
        "//nativelink-store",
        "//nativelink-util",
        "//nativelink-worker",
        "@crates//:async-lock",
        "@crates//:axum",
        "@crates//:clap",
        "@crates//:futures",
        "@crates//:hyper",
        "@crates//:mimalloc",
        "@crates//:parking_lot",
        "@crates//:prometheus-client",
        "@crates//:rustls-pemfile",
        "@crates//:scopeguard",
        "@crates//:serde_json5",
        "@crates//:tokio",
        "@crates//:tokio-rustls",
        "@crates//:tonic",
        "@crates//:tower",
        "@crates//:tracing",
    ],
)

genrule(
    name = "dummy_test_sh",
    outs = ["dummy_test.sh"],
    cmd = "echo \"sleep $$(( RANDOM % 15 ))\" > \"$@\"",
)

[sh_test(
    name = "dummy_test_{}".format(i),
    timeout = "short",
    srcs = [":dummy_test_sh"],
    tags = ["demo"],
) for i in range(1, 1000)]
