[package]
name = "nativelink-config"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
redis = { version = "0.25.2", features = ["aio", "connection-manager", "tokio-comp", "cluster", "cluster-async", "keep-alive"] }
redis-macros = "0.3.0"
serde_json = "1.0"
shellexpand = "3.1.0"
