load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "nativelink-error",
    srcs = [
        "src/lib.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//nativelink-proto",
        "@crates//:hex",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:redis",
        "@crates//:redis-macros",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)
