[package]
name = "nativelink-state"
version = "0.3.0"
edition = "2021"

[dependencies]
nativelink-error = { path = "../nativelink-error" }
nativelink-config = { path = "../nativelink-config" }
nativelink-util = { path = "../nativelink-util" }
nativelink-proto = { path = "../nativelink-proto" }
nativelink-store = { path = "../nativelink-store" }

async-lock = "3.3.0"
async-trait = "0.1.80"
blake3 = "1.5.1"
futures = "0.3.30"
hashbrown = "0.14"
hex = "0.4.3"
itertools = "0.12.1"
lru = "0.12.3"
parking_lot = "0.12.2"
prost = "0.12.4"
rand = "0.8.5"
redis = { version = "0.25.2", features = ["aio", "connection-manager", "tokio-comp", "cluster", "cluster-async", "keep-alive", "streams"] }
redis-macros = "0.3.0"
scopeguard = "1.2.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["sync", "rt", "parking_lot"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tonic = { version = "0.11.0", features = ["gzip", "tls"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
bitflags = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
nativelink-macro = { path = "../nativelink-macro" }

pretty_assertions = "1.4.0"
